Implement Reviews on MarinaManager side

--- a/app/src/main/res/layout/fragment_view_review.xml
+++ b/app/src/main/res/layout/fragment_view_review.xml
@@ -16,7 +16,9 @@
             android:id="@+id/marina_name_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/name"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/white"
