--- a/app/src/main/res/layout/review_brick.xml
+++ b/app/src/main/res/layout/review_brick.xml
@@ -59,5 +59,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="43dp"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/review" />
 </LinearLayout>
