--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -97,6 +97,13 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_landingFragment_to_bookingDetailsFragment"
+            app:destination="@id/bookingDetailsFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/boaterProfileFragment"
@@ -283,6 +290,11 @@
         android:name="com.navismart.navismart.view.ViewReviewFragment"
         android:label="fragment_view_review"
         tools:layout="@layout/fragment_view_review" />
+    <fragment
+        android:id="@+id/bookingDetailsFragment"
+        android:name="com.navismart.navismart.view.BookingDetailsFragment"
+        android:label="fragment_booking_details"
+        tools:layout="@layout/fragment_booking_details" />
     <fragment
         android:id="@+id/chatFragment"
         android:name="com.navismart.navismart.view.ChatFragment"
