--- a/app/src/main/res/layout/fragment_marina_page.xml
+++ b/app/src/main/res/layout/fragment_marina_page.xml
@@ -18,11 +18,23 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/marina_imageView"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:src="@drawable/gray_solid" />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/marina_imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:src="@drawable/gray_solid" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/imagesrecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
