--- a/app/src/main/res/layout/fragment_view_review.xml
+++ b/app/src/main/res/layout/fragment_view_review.xml
@@ -32,4 +32,14 @@
         android:layout_height="match_parent"
         android:layout_margin="8dp" />
 
+    <TextView
+        android:id="@+id/no_review_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="@string/no_review"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textStyle="bold" />
+
 </LinearLayout>
