--- a/app/src/main/res/layout/list_item_marina_activity_review.xml
+++ b/app/src/main/res/layout/list_item_marina_activity_review.xml
@@ -58,19 +58,17 @@
             android:textColor="#444444"
             android:textSize="14sp" />
 
-        <TextView
+        <RatingBar
             android:id="@+id/marina_activity_review_rating"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/newReviewsTextView"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="16dp"
             android:layout_marginTop="15dp"
-            android:layout_marginEnd="50dp"
-            android:background="@color/colorPrimaryDark"
-            android:padding="5dp"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:layout_marginEnd="20dp"
+            android:progressTint="@color/goldenYellow"/>
 
     </RelativeLayout>
 
