--- a/app/src/main/res/layout/review_brick.xml
+++ b/app/src/main/res/layout/review_brick.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     android:background="@color/white"
-    android:orientation="vertical"
-    android:layout_margin="8dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,12 +16,12 @@
             android:id="@+id/initial_text_view"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/circle"
-            android:textAlignment="center"
-            android:textSize="16sp"
             android:layout_gravity="center"
+            android:background="@drawable/circle"
             android:gravity="center"
-            android:textColor="@color/white" />
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -34,8 +35,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="3dp"
-                android:textSize="16sp"
                 android:text="@string/name"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -43,7 +44,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="@string/date" />
+                android:text="@string/date"
+                android:textColor="#737373"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <RatingBar
