Implement star rating logic in long datatype

--- a/app/src/main/res/layout/fragment_signup_boater.xml
+++ b/app/src/main/res/layout/fragment_signup_boater.xml
@@ -233,7 +233,7 @@
                 android:background="@android:color/darker_gray" />
 
             <Button
-                android:id="@+id/register_button"
+                android:id="@+id/boater_register_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
