--- a/app/src/main/res/layout/fragment_signup_marina_manager.xml
+++ b/app/src/main/res/layout/fragment_signup_marina_manager.xml
@@ -482,7 +482,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:id="@+id/register_button"
+                android:id="@+id/marina_register_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
