--- a/app/src/main/res/layout/marina_detail_layout.xml
+++ b/app/src/main/res/layout/marina_detail_layout.xml
@@ -89,9 +89,10 @@
             style="?android:attr/ratingBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
+            android:layout_below="@+id/marina_imageView"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="8dp"
             android:isIndicator="true"
             android:numStars="5"
             android:progressTint="@color/goldenYellow" />
