--- a/app/src/main/res/layout/boat_data_layout.xml
+++ b/app/src/main/res/layout/boat_data_layout.xml
@@ -1,81 +1,229 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="5dp">
+    android:layout_marginStart="12dp"
+    android:layout_marginTop="6dp"
+    android:layout_marginEnd="12dp"
+    app:cardCornerRadius="@dimen/card_corner_radius"
+    app:cardElevation="2dp"
+    app:ignore="NamespaceTypo"
+    card_view:cardBackgroundColor="#ffffff">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/boat_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            android:text="@string/name"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/white" />
-
-        <TextView
-            android:id="@+id/boat_id_display"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/boat_name"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"
-            android:text="@string/id"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@color/white" />
-
-        <TextView
-            android:id="@+id/boat_length_display"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/boat_id_display"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"
-            android:text="@string/length"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@color/white" />
-
-        <TextView
-            android:id="@+id/boat_beam_display"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/boat_length_display"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"
-            android:text="@string/beam"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@color/white" />
-
-        <TextView
-            android:id="@+id/boat_type_display"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/boat_beam_display"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="@string/type"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@color/white" />
+            android:text="@string/boat_name"
+            android:textColor="#262626"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/deleteBoat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/boat_id_display"
+            android:layout_above="@+id/boatTypeLinearLayout"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_margin="8dp"
+            android:layout_margin="2dp"
             android:src="@drawable/ic_delete_white_24dp" />
+
+        <LinearLayout
+            android:id="@+id/boatTypeLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/boat_name"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@id/outlineView"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/boatTypeTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/boat_ID"
+                android:textColor="#737373"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/boatIDTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/boat_type"
+                android:textColor="#737373"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/boatIDLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/boatTypeLinearLayout"
+            android:layout_marginStart="16dp"
+            android:layout_toEndOf="@id/outlineView"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/boat_id_display"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingEnd="24dp"
+                android:textColor="#444444"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/boat_type_display"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingEnd="24dp"
+                android:textColor="#444444"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/boatLengthLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/boatIDLinearLayout"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@id/outlineView"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/boatLengthTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/length"
+                android:textColor="#737373"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/boatBeamTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/beam"
+                android:textColor="#737373"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/boatBeamLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/boatLengthLinearLayout"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="10dp"
+            android:layout_toEndOf="@id/outlineView"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/boat_length_display"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingEnd="24dp"
+                android:textColor="#444444"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/boat_beam_display"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="#444444"
+                android:textSize="12sp" />
+        </LinearLayout>
+
     </RelativeLayout>
+
+    <!--<RelativeLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:background="@color/colorPrimary">-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/boat_name"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginStart="10dp"-->
+    <!--android:layout_marginTop="10dp"-->
+    <!--android:layout_marginBottom="5dp"-->
+    <!--android:text="@string/name"-->
+    <!--android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
+    <!--android:textColor="@color/white" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/boat_id_display"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@id/boat_name"-->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_marginEnd="10dp"-->
+    <!--android:text="@string/id"-->
+    <!--android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
+    <!--android:textColor="@color/white" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/boat_length_display"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@id/boat_id_display"-->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_marginEnd="10dp"-->
+    <!--android:text="@string/length"-->
+    <!--android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
+    <!--android:textColor="@color/white" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/boat_beam_display"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@id/boat_length_display"-->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_marginEnd="10dp"-->
+    <!--android:text="@string/beam"-->
+    <!--android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
+    <!--android:textColor="@color/white" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/boat_type_display"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@id/boat_beam_display"-->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_marginEnd="10dp"-->
+    <!--android:layout_marginBottom="10dp"-->
+    <!--android:text="@string/type"-->
+    <!--android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
+    <!--android:textColor="@color/white" />-->
+
+    <!--<ImageView-->
+    <!--android:id="@+id/deleteBoat"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_above="@+id/boat_id_display"-->
+    <!--android:layout_alignParentTop="true"-->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_margin="8dp"-->
+    <!--android:src="@drawable/ic_delete_white_24dp" />-->
+    <!--</RelativeLayout>-->
 
 </android.support.v7.widget.CardView>
