--- a/app/src/main/res/layout/fragment_boater_message.xml
+++ b/app/src/main/res/layout/fragment_boater_message.xml
@@ -3,7 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.BoaterMessageFragment">
+    tools:context=".view.BoaterMessageFragment"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/no_msg_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="@string/no_msg"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textStyle="bold" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/marinaMessageRecyclerView"
