--- a/app/src/main/res/layout/fragment_marina_page.xml
+++ b/app/src/main/res/layout/fragment_marina_page.xml
@@ -222,6 +222,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/description_brick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
@@ -256,6 +257,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/facilities_brick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
@@ -290,6 +292,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/terms_n_conditions_brick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
