--- a/app/src/main/res/layout/fragment_marina_page.xml
+++ b/app/src/main/res/layout/fragment_marina_page.xml
@@ -41,17 +41,17 @@
                 </LinearLayout>
 
                 <ImageView
-                    android:id="@+id/nextImage"
+                    android:id="@+id/prevImage"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="start|center_vertical"
                     android:padding="5dp"
                     android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />
 
                 <ImageView
-                    android:id="@+id/prevImage"
+                    android:id="@+id/nextImage"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="end|center_vertical"
                     android:padding="5dp"
                     android:src="@drawable/ic_keyboard_arrow_right_white_24dp" />
@@ -66,7 +66,7 @@
 
                 <TextView
                     android:id="@+id/marina_name_textView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
                     android:layout_weight="1"
@@ -78,7 +78,6 @@
                     style="?android:attr/ratingBarStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="5dp"
                     android:isIndicator="true"
